[gd_scene load_steps=8 format=3 uid="uid://lnx1x5uhufo4"]

[ext_resource type="Script" uid="uid://cscn0sc5gt01y" path="res://examples/cards/standard_deck/standard_layout.gd" id="1_2dmvv"]
[ext_resource type="Script" uid="uid://c535lguvmfhkb" path="res://addons/simple_cards/card/card_layout/card_animation_resource/prebuild_animations/scale_animation.gd" id="2_cho7o"]
[ext_resource type="FontFile" uid="uid://fpoco0u13011" path="res://examples/cards/standard_deck/KarenFat.ttf" id="2_jahet"]
[ext_resource type="Texture2D" uid="uid://d13a1tcqjxkas" path="res://examples/cards/standard_deck/club.png" id="3_7a6qm"]

[sub_resource type="Resource" id="Resource_cho7o"]
resource_local_to_scene = true
script = ExtResource("2_cho7o")
scale_value = Vector2(1.2, 1.2)
custom_z_index = 100
metadata/_custom_type_script = "uid://c535lguvmfhkb"

[sub_resource type="Resource" id="Resource_wmam2"]
resource_local_to_scene = true
script = ExtResource("2_cho7o")
custom_z_index = -100
metadata/_custom_type_script = "uid://c535lguvmfhkb"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jahet"]
bg_color = Color(1, 0.9766667, 0.9, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.14044741, 0.14044747, 0.14044735, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 16

[node name="CardLayout" type="SubViewportContainer"]
offset_right = 80.0
offset_bottom = 112.0
script = ExtResource("1_2dmvv")
anim_group_checked = true
focus_in_animation = SubResource("Resource_cho7o")
focus_out_animation = SubResource("Resource_wmam2")
metadata/is_layout = true
metadata/layout_id = "standard_layout"
metadata/tags = ["front"]
metadata/_custom_type_script = "uid://dm115oleoggyt"

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(80, 112)
render_target_update_mode = 4

[node name="CardColor" type="PanelContainer" parent="SubViewport"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jahet")

[node name="MarginContainer" type="MarginContainer" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Texture1" type="TextureRect" parent="SubViewport/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("3_7a6qm")
expand_mode = 1
stretch_mode = 5
flip_v = true

[node name="Value1" type="Label" parent="SubViewport/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.14117648, 0.14117648, 0.14117648, 1)
theme_override_fonts/font = ExtResource("2_jahet")
text = "2"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="SubViewport/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Value2" type="Label" parent="SubViewport/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.14117648, 0.14117648, 0.14117648, 1)
theme_override_fonts/font = ExtResource("2_jahet")
text = "2"
vertical_alignment = 1

[node name="Texture2" type="TextureRect" parent="SubViewport/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("3_7a6qm")
expand_mode = 1
stretch_mode = 5

[node name="Texture" type="TextureRect" parent="SubViewport/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_7a6qm")
stretch_mode = 3
